5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1578_1333.log
== TEST (2019-03-13 11:09:03) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:09:41) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:11:33) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:11:56) 
-- CODE:
expressao =(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao =(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:12:09) 
-- CODE:
expressao =( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao =( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:13:10) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:34:09) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:47:38) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- EXECUTION TIME:
0.21311
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:47:47) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:48:37) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:07:57) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:08:10) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:10:58) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:15:50) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:15:55) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.162219
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:16:31) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:17:06) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.199076
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:17:46) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:21:35) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:24:01) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:25:07) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.189456
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:25:20) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:25:29) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print ( 30 – 3 ** 2 + 8 // 3 ** 2 * 10 )
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:25:46) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:27:27) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 2
    print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:28:11) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 - 3 ** 2 + 8 // 3 ** 2 ** 10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:28:19) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 - 3 ** 2 + 8 // 3 ** 2 ** 10)
-- EXECUTION TIME:
0.192175
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:00:32) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 - 3 ** 2 + 8 // 3 ** 2 ** 10)
-- EXECUTION TIME:
0.155211
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:07:34) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 - 3 ** 2 + 8 // 3 ** 2 ** 10)
-- EXECUTION TIME:
0.124223
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:11:25) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10 
print(30 - 3 ** 2 + 8 // 3 ** 2 ** 10)
-- EXECUTION TIME:
0.190006
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
